# rtcw-mds-viewer

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: md3.glsl  mds.glsl
src/: Camera.cpp  Camera.h  DrawCall.h  MD3File.h  MD3Model.cpp  MD3Model.h  MDSFile.h  MDSModel.cpp  MDSModel.h  MainQueue.h  Math.h  Matrix.cpp  RenderableModel.cpp  RenderableModel.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skin.cpp  Skin.h  Utils.cpp  Utils.h  Vector.cpp  WolfAnim.cpp  WolfAnim.h  WolfCharacter.cpp  WolfCharacter.h  main.cpp  studio.h
